--- a/cv.html
+++ b/cv.html
@@ -36,7 +36,7 @@
         <ul>
           <li>Spanish – Native
           <li>Galician – Native
-          <li>English – Proficient
+          <li>English – Native level
           <li>French – Proficient
         </ul>
       </section>
@@ -76,16 +76,18 @@
     <main>
       <section>
         <h1>&nbsp;About me&nbsp;</h1>
-        <p>A professional translator and communicator working from English, French and Galician into Spanish. I grew up in Galicia, Spain, and my love for languages led me to study at University of Geneva, while living in France right across the border. With a background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to have a positive impact. You can make my heart sing with creative projects, which is why I enjoy transcreation and literary translation. On that same note, I am also a singer and musician, and I like to constantly learn new skills, so I keep up with a diverse list of hobbies, including reading, baking, knitting and gardening.</p>
+        <p>I’m a professional translator and communicator working from English, French and Galician into Spanish. I grew up in Galicia, Spain, and my love for languages led me to study at University of Geneva, while living in France right across the border. With a background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to have a positive impact.</p>
       </section>
 
       <section>
         <h1>&nbsp;Professional experience&nbsp;</h1>
         <ol>
           <li>
-            <time>2017 – 2025</time>
-            <h2>Spanish Translation Manager and Social Media Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h2>
-            <p>As the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. For the first few years, I combined my work there with my studies at University of Geneva, which allowed me to put theory into practice, honing my skills as a translator and communicator. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management.</p>
+            <h2>
+              <time>2017 – 2025</time>
+              <span>Spanish Translation Manager and Social Media Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></span>
+            </h2>
+            <p>When the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management.</p>
             <p>Some of the projects and tasks I was in charge of or collaborated on include:</p>
             <ul>
               <li>Translation and editing of social media content
@@ -106,30 +108,49 @@
               <li>Internal initiatives towards content sensitive to food access, economic background and cultural barriers
               <li>Launch and stewardship of an internal book club focused on cross-cultural sensitivity
             </ul>
-            <p class="secondary-text">Disclaimer: Not all content seen in NutritionFacts’ platforms was translated or edited by me; this includes social media. A high number of translations were done by volunteers, and content continues to be produced and edited after my departure.</p>
           </li>
           <li>
-            <time>2015 – 2017</time>
-            <h2>Volunteer Translator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h2>
-            <p>As a teenager, I learned that the Internet was a much bigger world if you spoke English. It was around that time that I discovered NutritionFacts and fell in love with their mission. As a non-profit organization, a lot of their translation work is done through volunteers, and I jumped on that bandwagon as soon as the opportunity presented itself.</p>
-            <p>During this period, I translated subtitles using the now defunct Google Translator Toolkit and translated and edited transcripts on WordPress. It was around this time that NutritionFacts was getting ready to launch their Spanish website, where I was able to help with string translation. Not long after, they started their Spanish social media pages, which I was more than happy to lend a hand with as well.</p>
-            <p>That was the beginning of what would become my professional career, as it helped me decide what studies to pursue, something which I’m extremely grateful for.</p>
+            <h2>
+              <time>2015 – 2017</time>
+              <span>Volunteer Translator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></span>
+            </h2>
+            <p>I began translating subtitles using Google Translator Toolkit and translating and editing transcripts on WordPress. Later on, I witnessed the launch of their Spanish website and social media pages and helped with both.</p>
           </li>
         </ol>
       </section>
-    </main>
-  </article>
 
-  <article>
-    <aside></aside>
+      <section class="education">
+        <h1>&nbsp;Education&nbsp;</h1>
+        <ol>
+          <li>
+            <time>2020 – 2021</time>
+            <h2>Expert Diploma in Marketing Implementation and Transcreation</h2>
+            <h3><abbr title="Instituto Superior de Estudios Lingüísticos y Traducción">ISTRAD</abbr>, Spain</h3>
+          </li>
+          <li>
+            <time>2018</time>
+            <h2>Erasmus+ Exchange</h2>
+            <h3>Heriot-Watt University, Scotland</h3>
+          </li>
+          <li>
+            <time>2017 – 2020</time>
+            <h2>Bachelor of Arts in Multilingual Communication</h2>
+            <h3>University of Geneva, Switzerland</h3>
+          </li>
+        </ol>
+      </section>
 
-    <main>
-      <section>
+      <section class="education">
         <h1>&nbsp;Courses&nbsp;</h1>
         <ol>
           <li>
-            <time>2020</time>
-            <h2>Romantic and erotic translation EN–ES</h2>
+            <time>2021</time>
+            <h2>Children and young adult literary translation EN–ES</h2>
+            <h3>AulaSIC</h3>
+          </li>
+          <li>
+            <time>2021</time>
+            <h2>Subtitling and audiovisual translation</h2>
             <h3>AulaSIC</h3>
           </li>
           <li>
@@ -138,35 +159,9 @@
             <h3>Cursiva (RAE)</h3>
           </li>
           <li>
-            <time>2021</time>
-            <h2>Subtitling and audiovisual translation</h2>
+            <time>2020</time>
+            <h2>Romantic and erotic translation EN–ES</h2>
             <h3>AulaSIC</h3>
-          </li>
-          <li>
-            <time>2021</time>
-            <h2>Children and young adult literary translation EN–ES</h2>
-            <h3>AulaSIC</h3>
-          </li>
-        </ol>
-      </section>
-
-      <section>
-        <h1>&nbsp;Education&nbsp;</h1>
-        <ol>
-          <li>
-            <time>2017 – 2020</time>
-            <h2>Bachelor of Arts in Multilingual Communication</h2>
-            <h3>University of Geneva, Switzerland</h3>
-          </li>
-          <li>
-            <time>2018</time>
-            <h2>Erasmus+ Exchange</h2>
-            <h3>Heriot-Watt University, Scotland</h3>
-          </li>
-          <li>
-            <time>2020 – 2021</time>
-            <h2>Expert Diploma in Marketing Implementation and Transcreation</h2>
-            <h3><abbr title="Instituto Superior de Estudios Lingüísticos y Traducción">ISTRAD</abbr>, Spain</h3>
           </li>
         </ol>
       </section>
@@ -174,6 +169,8 @@
   </article>
 
   <style>
+    :root { --sidebar-width: 25% }
+
     * { box-sizing: border-box }
 
     a {
@@ -185,8 +182,6 @@
 
     abbr { text-decoration: none }
 
-    .secondary-text { color: #444 }
-
     html { font-size: 3mm }
 
     body {
@@ -197,60 +192,66 @@
       background-color: #525659;
     }
 
-    body > article {
+    @media print {
+      body { margin: 0 }
+    }
+
+    article {
       display: flex;
       width: 210mm;
       height: 297mm;
-      overflow: hidden;
       position: relative;
-      font-family: Merriweather, serif;
       font-family: 'Source Sans 3', system-ui;
       background-color: #fff;
       box-shadow: 0 5px 10px rgb(0 0 0 / 15%);
     }
 
-    body > article > header {
+    article:first-of-type > header {
       width: 100%;
-      height: calc-size(max-content, size + 65px);
+      height: calc-size(max-content, size + 60px);
+      padding-left: var(--sidebar-width);
       position: absolute;
       top: 0;
       left: 0;
       z-index: 0;
+      overflow: hidden;
       text-align: center;
       color: #fff;
       background-color: #76488b;
       background-image: linear-gradient(#412565, #ab6bb0);
 
       > h1,
-      > h2 {
-        padding-left: 25%;
-        text-shadow: 0 1px 0 rgb(0 0 0 / 50%);
-      }
+      > h2 { text-shadow: 0 1px 0 rgb(0 0 0 / 35%) }
 
       > h1 {
-        margin: 2rem 0 0 0;
-        font-weight: 600;
+        margin: 2.25rem 0 0 0;
+        font-size: 1.75rem;
+        font-weight: 500;
       }
 
       > h2 {
-        margin: 0.25rem 0 0 0;
+        margin: 0.1rem 0 0 0;
+        font-size: 1.3rem;
         font-weight: 400;
+        font-style: italic;
       }
     }
 
-    body > article > aside {
-      min-width: 25%;
+    article > aside {
+      min-width: var(--sidebar-width);
+      max-width: var(--sidebar-width);
       z-index: 1;
-      padding: 1.5rem;
+      padding: 2.25rem;
       background-color: #76488b11;
 
       > img {
         width: 12.5rem;
+        margin-bottom: 0.25rem;
         border-radius: 50%;
       }
 
       h1 {
-        font-size: 1.25rem;
+        font-size: 1.3rem;
         font-weight: 600;
       }
 
@@ -266,6 +267,8 @@
         flex-wrap: wrap;
         gap: 0.4rem;
         padding: 0;
+        font-size: 0.9rem;
+        font-weight: 450;
 
         > li {
           padding: 0.125rem 0.45rem;
@@ -277,14 +280,14 @@
       a { font-weight: 500 }
     }
 
-    body > article:first-of-type > main { padding-top: 115px }
+    article:first-of-type > main { padding-top: 100px }
 
-    body > article > main {
+    article > main {
       z-index: 1;
-      padding: 1.5rem;
+      padding: 2.25rem;
 
       h1 {
-        font-size: 1.35rem;
+        font-size: 1.3rem;
         font-weight: 600;
       }
 
@@ -300,17 +303,11 @@
 
         h2 {
           display: inline;
-          font-size: 1.25rem;
+          font-size: 1.15rem;
           font-weight: 500;
-          margin-left: 0.25rem;
-        }
-
-        h3 {
-          display: inline;
-          font-size: 1.25rem;
-          font-weight: 400;
-
-          &::before { content: ' – ' }
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
         }
 
         > ol {
@@ -320,6 +317,33 @@
 
           ul { padding-left: 1.25rem }
         }
+      }
+    }
+
+    section {
+      font-size: 1.1rem;
+
+      p { margin: 0.75rem 0 }
+    }
+
+    section.education {
+      h2, h3 { margin: 0 }
+
+      h2 { display: block }
+
+      h3 {
+        display: inline;
+        font-size: 1.15rem;
+        font-weight: 400;
+
+        &::before { content: ' – ' }
+      }
+
+      ol > li {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 0.5rem;
       }
     }
 
