--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
           <time>2015 – 2017</time>
           <h3>Volunteer Translator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
           <p>As a teenager, I learned that the Internet was a much bigger world if you spoke English. It was around that time that I discovered NutritionFacts and fell in love with their mission. As a non-profit organization, a lot of their translation work is done through volunteers, and I jumped on that bandwagon as soon as the opportunity presented itself.</p>
-          <p>During this period, I translated subtitles using the now defunct Google Translator Toolkit and translated and edited transcripts on WordPress. It was around this time that NutritionFacts was getting ready to launch their Spanish website, where I was able to help with string translation. Not long after, they started their Spanish social media pages, which I was more than happy to lend a hand with as well.</p>
+          <p>During this period, I translated subtitles using the now defunct Google Translator Toolkit and translated and edited transcripts on WordPress. It was around this time that NutritionFacts was getting ready to launch their Spanish website, where I was able to help with localization. Not long after, they started their Spanish social media pages, which I was more than happy to lend a hand with as well.</p>
           <p>That was the beginning of what would become my professional career, as it helped me decide what studies to pursue, something which I’m extremely grateful for.</p>
         </li>
         <li>
