--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
       </svg>
 
       <h1>Ángela Graña Varela</h1>
-      <h2>Professional translator</h2>
+      <h2>Multilingual communication</h2>
     </header>
 
     <aside>
@@ -201,7 +201,7 @@
       width: 210mm;
       height: 297mm;
       position: relative;
-      font-family: 'Source Sans 3', system-ui;
+      font-family: 'Source Sans 3';
       background-color: #fff;
       box-shadow: 0 5px 10px rgb(0 0 0 / 15%);
     }
@@ -221,17 +221,20 @@
       background-image: linear-gradient(#412565, #ab6bb0);
 
       > h1,
-      > h2 { text-shadow: 0 1px 0 rgb(0 0 0 / 35%) }
+      > h2 {
+        font-family: Merriweather;
+        text-shadow: 0 1px 0 rgb(0 0 0 / 35%);
+      }
 
       > h1 {
         margin: 2.25rem 0 0 0;
-        font-size: 1.75rem;
+        font-size: 1.65rem;
         font-weight: 500;
       }
 
       > h2 {
-        margin: 0.1rem 0 0 0;
-        font-size: 1.3rem;
+        margin: 0.6rem 0 0 0;
+        font-size: 1.15rem;
         font-weight: 400;
         font-style: italic;
       }
@@ -248,11 +251,6 @@
         width: 12.5rem;
         margin-bottom: 0.25rem;
         border-radius: 50%;
-      }
-
-      h1 {
-        font-size: 1.3rem;
-        font-weight: 600;
       }
 
       ul {
@@ -286,11 +284,6 @@
       z-index: 1;
       padding: 2.25rem;
 
-      h1 {
-        font-size: 1.3rem;
-        font-weight: 600;
-      }
-
       > section {
         time {
           display: inline;
@@ -323,6 +316,17 @@
     section {
       font-size: 1.1rem;
 
+      > h1 {
+        font-family: Merriweather;
+        font-size: 1.15rem;
+        font-weight: 600;
+        text-decoration-line: underline;
+        text-decoration-thickness: 0.4em;
+        text-decoration-skip-ink: none;
+        text-decoration-color: #e0cde1;
+        text-underline-offset: -0.18em;
+      }
+
       p { margin: 0.75rem 0 }
     }
 
@@ -345,14 +349,6 @@
         align-items: center;
         gap: 0.5rem;
       }
-    }
-
-    section > h1 {
-      text-decoration-line: underline;
-      text-decoration-thickness: 0.4em;
-      text-decoration-skip-ink: none;
-      text-decoration-color: #e0cde1;
-      text-underline-offset: -0.18em;
     }
 
     svg {
