--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         </p>
         <ul>
           <li><a href="#contact" title="Scroll down to contact form">Contact</a>
-          <li><a href="CV_AngelaGV_Translator_EN-ES.pdf" target="_blank">CV</a>
+          <li><a href="AngelaGV_CV_EN.pdf" target="_blank">CV</a>
           <li><a target="_blank" href="https://linkedin.com/in/angelagv">LinkedIn</a>
         </ul>
       </article>
@@ -617,7 +617,7 @@
         </p>
         <ul>
           <li><a href="#contacto" title="Ir al formulario de contacto">Contacto</a>
-          <li><a href="CV_AngelaGV_Traductora_EN-ES.pdf" target="_blank">CV</a>
+          <li><a href="AngelaGV_CV_ES.pdf" target="_blank">CV</a>
           <li><a target="_blank" href="https://linkedin.com/in/angelagv">LinkedIn</a>
         </ul>
       </article>
