--- a/cv-en.html
+++ b/cv-en.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CV_AngelaGV_Translator_EN-ES</title>
+  <title>AngelaGV_CV_EN</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap">
@@ -220,6 +220,14 @@
       background-color: #76488b;
       background-image: linear-gradient(#412565, #ab6bb0);
 
+      svg {
+        width: calc(100% + 2px);
+        position: absolute;
+        bottom: -1px;
+        left: -1px;
+        fill: #fff;
+      }
+
       > h1,
       > h2 {
         font-family: Merriweather;
@@ -263,7 +271,7 @@
         list-style: none;
         display: flex;
         flex-wrap: wrap;
-        gap: 0.4rem;
+        gap: 0.5rem 0.4rem;
         padding: 0;
         font-size: 0.9rem;
         font-weight: 450;
@@ -317,6 +325,7 @@
       font-size: 1.1rem;
 
       > h1 {
+        margin-top: 1rem;
         font-family: Merriweather;
         font-size: 1.15rem;
         font-weight: 600;
@@ -349,13 +358,5 @@
         align-items: center;
         gap: 0.5rem;
       }
-    }
-
-    svg {
-      width: calc(100% + 2px);
-      position: absolute;
-      bottom: -1px;
-      left: -1px;
-      fill: #fff;
     }
   </style>
