Fix spurious line showing up at certain zoom levels in certain PDF readers

--- a/cv-en.html
+++ b/cv-en.html
@@ -218,7 +218,7 @@
       text-align: center;
       color: #fff;
       background-color: #76488b;
-      background-image: linear-gradient(#412565, #ab6bb0);
+      background-image: linear-gradient(#412565 0%, #ab6bb0 95%, #fff 95%, #fff 100%);
 
       svg {
         width: calc(100% + 2px);
