--- a/cv-es.html
+++ b/cv-es.html
@@ -217,7 +217,6 @@
       overflow: hidden;
       text-align: center;
       color: #fff;
-      background-color: #76488b;
       background-image: linear-gradient(#412565 0%, #ab6bb0 95%, #fff 95%, #fff 100%);
 
       svg {
@@ -279,7 +278,7 @@
         > li {
           padding: 0.125rem 0.45rem;
           border-radius: 4px;
-          background-color: #d5d5d5;
+          background-color: rgb(0 0 0 / 10%);
         }
       }
 
@@ -299,7 +298,7 @@
           border-radius: 4px;
           font-size: 0.9rem;
           font-weight: 600;
-          background-color: #d5d5d5;
+          background-color: rgb(0 0 0 / 10%);
         }
 
         h2 {
