Update website link from Spanish CV

--- a/cv-es.html
+++ b/cv-es.html
@@ -27,7 +27,7 @@
         <ul>
           <li><a href="mailto:angelagranavarela@gmail.com">Email</a>
           <li><a target="_blank" href="https://linkedin.com/in/angelagv">LinkedIn</a>
-          <li><a target="_blank" href="https://angelagv.github.io/?lang=en">Website</a>
+          <li><a target="_blank" href="https://angelagv.github.io/?lang=es">Website</a>
         </ul>
       </section>
 
