Adjust website margins

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     .outro {
       display: flex;
       flex-direction: column;
-      gap: 75px;
+      gap: 50px;
       align-items: center;
       overflow: hidden;
       color: #eee;
@@ -128,6 +128,8 @@
     }
 
     .intro > article {
+      margin-top: -25px;
+
       > img {
         margin-bottom: 25px;
         border-radius: 50%;
@@ -172,9 +174,11 @@
     .outro {
       gap: 50px;
       padding: 0 0 50px 0;
+      margin-top: 25px;
     }
 
     .outro > article {
+      margin-top: -25px;
       z-index: 0;
 
       > h2 {
@@ -217,6 +221,8 @@
       text-wrap: balance;
       opacity: 0.75;
     }
+
+    main > section.services { margin-top: -5px }
 
     .services > article {
       display: flex;
