Small fixes in Spanish copy

--- a/index.html
+++ b/index.html
@@ -728,11 +728,11 @@
           <time>2017 – 2025</time>
           <h3>Coordinadora de la traducción al español y las redes sociales para <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
           <p>Cuando las responsabilidades del nuevo departamento de español de NutritionFacts aumentaron, confiaron en mí para ocupar un nuevo puesto en plantilla. Durante los primeros años, junté este trabajo con mis estudios en la Universidad de Ginebra, y esto me permitió poner en práctica lo aprendido y pulir mis habilidades como traductora y comunicadora. A lo largo de toda mi etapa en esta organización, tuve la oportunidad de trabajar en una gran variedad de áreas y expandir mis conocimentos más allá de la traducción; desde las redes sociales, hasta la edición, el <em>marketing</em>, las relaciones públicas y la gestión de páginas web.</p>
-          <p>Estos son algunos de los proyectos o tareas para los que era responsable o colaboradora:</p>
+          <p>Estos son algunos de los proyectos o tareas de los que fui responsable o colaboradora:</p>
           <ul>
             <li>Traducción y edición de contenido para redes sociales
             <li>Transcreación y <em>copywriting</em> para campañas promocionales y recaudaciones de fondos
-            <li>Localización de recursos divulgativos, como guías de nutrición saludable, infografías y cursos por correo electrónico.
+            <li>Localización de recursos divulgativos, como guías de nutrición saludable, infografías y cursos por correo electrónico
             <li>Análisis de métricas para medir el alcance y la participación del público, y conseguir así establecer una presencia en redes de más de&nbsp;225&#x202F;000 seguidores desde cero
             <li>Programación del calendario de redes con plataformas como Buffer, TikTok Studio y Later
             <li>Localización de la página web y gestión de contenidos en WordPress
