Upload new Spanish CV. Update portrait. Style touch-ups

--- a/cv-en.html
+++ b/cv-en.html
@@ -61,13 +61,15 @@
       </section>
 
       <section>
-        <h1>&nbsp;Hobbies&nbsp;</h1>
+        <h1>&nbsp;Interests&nbsp;</h1>
         <ul class="pills">
           <li>Singing
           <li>Making music
           <li>Reading
           <li>Baking
+          <li>Sourdough bread
           <li>Knitting
+          <li>Sewing
           <li>Gardening
         </ul>
       </section>
@@ -257,6 +259,7 @@
       > img {
         width: 12.5rem;
         margin-bottom: 0.25rem;
+        border: 1.5mm solid #f6f3f7;
         border-radius: 50%;
       }
 
@@ -293,7 +296,6 @@
 
       > section {
         time {
-          display: inline;
           padding: 0 0.35rem;
           border-radius: 4px;
           font-size: 0.9rem;
@@ -302,12 +304,12 @@
         }
 
         h2 {
-          display: inline;
-          font-size: 1.15rem;
-          font-weight: 500;
           display: flex;
           align-items: center;
           gap: 0.5rem;
+          margin-bottom: 0;
+          font-size: 1.15rem;
+          font-weight: 500;
         }
 
         > ol {
