--- a/cv-es.html
+++ b/cv-es.html
@@ -23,26 +23,26 @@
       <img src="portrait.jpg">
 
       <section>
-        <h1>&nbsp;Contact details&nbsp;</h1>
+        <h1>&nbsp;Datos de contacto&nbsp;</h1>
         <ul>
-          <li><a href="mailto:angelagranavarela@gmail.com">Email</a>
+          <li><a href="mailto:angelagranavarela@gmail.com">Correo electrónico</a>
           <li><a target="_blank" href="https://linkedin.com/in/angelagv">LinkedIn</a>
-          <li><a target="_blank" href="https://angelagv.github.io/?lang=es">Website</a>
+          <li><a target="_blank" href="https://angelagv.github.io/?lang=es">Página web</a>
         </ul>
       </section>
 
       <section>
-        <h1>&nbsp;Languages&nbsp;</h1>
+        <h1>&nbsp;Idiomas&nbsp;</h1>
         <ul>
-          <li>Spanish – Native
-          <li>Galician – Native
-          <li>English – Native level
-          <li>French – Proficient
+          <li>Español – Nativo
+          <li>Gallego – Nativo
+          <li>Inglés – Nivel nativo
+          <li>Francés – Nivel avanzado
         </ul>
       </section>
 
       <section>
-        <h1>&nbsp;Tools&nbsp;</h1>
+        <h1>&nbsp;Herramientas&nbsp;</h1>
         <ul class="pills">
           <li>memoQ
           <li>Trados
@@ -61,106 +61,108 @@
       </section>
 
       <section>
-        <h1>&nbsp;Hobbies&nbsp;</h1>
+        <h1>&nbsp;Intereses&nbsp;</h1>
         <ul class="pills">
-          <li>Singing
-          <li>Making music
-          <li>Reading
-          <li>Baking
-          <li>Knitting
-          <li>Gardening
+          <li>Canto
+          <li>Hacer música
+          <li>Repostería
+          <li>Masa madre
+          <li>Leer
+          <li>Tejer
+          <li>Costura
+          <li>Jardinería
         </ul>
       </section>
     </aside>
 
     <main>
       <section>
-        <h1>&nbsp;About me&nbsp;</h1>
-        <p>I’m a professional translator and communicator working from English, French and Galician into Spanish. I grew up in Galicia, Spain, and my love for languages led me to study at University of Geneva, while living in France right across the border. With a background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to have a positive impact.</p>
+        <h1>&nbsp;Sobre mí&nbsp;</h1>
+        <p>Trabajo como traductora profesional del inglés, francés y gallego al español. Me crié en Galicia, España, y mi amor por los idiomas hizo que acabase estudiando en la Facultad de Traducción e Interpretación de la Universidad de Ginebra, mientras vivía en Francia al otro lado de la frontera. Con mi trayectoria en comunicación, <i>marketing</i> y redes sociales, y más de ocho años de experiencia con organizaciones sin ánimo de lucro, creo fervientemente en el poder del lenguaje como motor del cambio.</p>
       </section>
 
       <section>
-        <h1>&nbsp;Professional experience&nbsp;</h1>
+        <h1>&nbsp;Experiencia profesional&nbsp;</h1>
         <ol>
           <li>
             <h2>
               <time>2017 – 2025</time>
-              <span>Spanish Translation Manager and Social Media Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></span>
+              <span>Coordinadora de la traducción al español y las redes sociales para <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></span>
             </h2>
-            <p>When the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management.</p>
-            <p>Some of the projects and tasks I was in charge of or collaborated on include:</p>
+            <p>Cuando las responsabilidades del nuevo departamento de español de NutritionFacts aumentaron, confiaron en mí para ocupar un nuevo puesto en plantilla. A lo largo de toda mi etapa en esta organización, tuve la oportunidad de trabajar en una gran variedad de áreas y expandir mis conocimentos más allá de la traducción; desde las redes sociales, hasta la edición, el <i>marketing</i>, las&nbsp;relaciones públicas y la gestión de páginas web.</p>
+            <p>Estos son algunos de los proyectos o tareas de los que fui responsable o colaboradora:</p>
             <ul>
-              <li>Translation and editing of social media content
-              <li>Transcreation and copywriting for promotional and fundraising campaigns
-              <li>Localization of educational resources, including healthy eating guides, infographics and email series
-              <li>Metric analysis to track reach and engagement, helping establish a combined social media presence of&nbsp;225,000+ followers from the ground up
-              <li>Social media content scheduling through platforms such as Buffer, TikTok Studio and Later
-              <li>Website localization and content management in WordPress
-              <li>Localization for Dr. Greger’s Daily Dozen, a habit-tracking app for Android and iOS
-              <li>Video editing, Spanish voiceovers and Spanish captions
-              <li>Subtitling for long-form lectures and other key video material
-              <li>Adapt graphic material to Spanish for use across online platforms
-              <li>Cross-team project management with Asana
-              <li>Selection of Spanish translation volunteers, with direct impact on output quality
-              <li>Management of a small team of volunteers for blog post translations
-              <li>Proofreading of biweekly Spanish blog posts
-              <li>Team brainstorming to reach strategic planning goals
-              <li>Internal initiatives towards content sensitive to food access, economic background and cultural barriers
-              <li>Launch and stewardship of an internal book club focused on cross-cultural sensitivity
+              <li>Traducción y edición de contenido para redes sociales
+              <li>Transcreación y <i>copywriting</i> para campañas promocionales y recaudaciones de fondos
+              <li>Localización de recursos divulgativos, como guías de nutrición saludable, infografías y cursos por correo electrónico
+              <li>Análisis de métricas para medir el alcance y la participación del público, y conseguir así establecer una presencia en redes de más de 225&nbsp;000 seguidores desde cero
+              <li>Programación del calendario de redes con plataformas como Buffer, TikTok Studio y Later
+              <li>Localización de la página web y gestión de contenidos en WordPress
+              <li>Localización de la aplicación móvil "La Docena Diaria del Dr. Greger" para Android y iOS
+              <li>Edición de vídeo, grabación de voz en off y creación de subtítulos
+              <li>Traducción de subtítulos para charlas y otros materiales clave
+              <li>Adaptación de material gráfico para su uso en distintas plataformas
+              <li>Gestión de proyectos interdisciplinarios con Asana
+              <li>Selección de traductores voluntarios de español, con impacto directo en la calidad de los textos
+              <li>Gestión de un pequeño equipo de voluntarios para traducciones de artículos de blog
+              <li>Revisión y corrección de artículos de blog
+              <li>Sesiones en equipo para sacar ideas que permitan alcanzar las metas de la planificación estratégica
+              <li>Iniciativas internas sobre contenido con sensibilidad hacia los problemas de acceso a comida, situación econónima y barreras culturales
+              <li>Creación y tutela de un club de lectura enfocado en sensibilización multicultural
             </ul>
           </li>
           <li>
             <h2>
               <time>2015 – 2017</time>
-              <span>Volunteer Translator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></span>
+              <span>Traductora voluntaria para <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></span>
             </h2>
-            <p>I began translating subtitles using Google Translator Toolkit and translating and editing transcripts on WordPress. Later on, I witnessed the launch of their Spanish website and social media pages and helped with both.</p>
+            <p>Comencé traduciendo subtítulos con Google Translator Toolkit y traduciendo y editando transcripciones en WordPress. Más adelante, vi nacer la página web y las redes sociales en español y ayudé con ambos proyectos.</p>
           </li>
         </ol>
       </section>
 
       <section class="education">
-        <h1>&nbsp;Education&nbsp;</h1>
+        <h1>&nbsp;Estudios&nbsp;</h1>
         <ol>
           <li>
             <time>2020 – 2021</time>
-            <h2>Expert Diploma in Marketing Implementation and Transcreation</h2>
-            <h3><abbr title="Instituto Superior de Estudios Lingüísticos y Traducción">ISTRAD</abbr>, Spain</h3>
+            <h2>Experto en Traducción y Marketing: Transcreación y Publicidad</h2>
+            <h3><abbr title="Instituto Superior de Estudios Lingüísticos y Traducción">ISTRAD</abbr>, España</h3>
           </li>
           <li>
             <time>2018</time>
-            <h2>Erasmus+ Exchange</h2>
-            <h3>Heriot-Watt University, Scotland</h3>
+            <h2>Intercambio Erasmus+</h2>
+            <h3>Heriot-Watt University, Escocia</h3>
           </li>
           <li>
             <time>2017 – 2020</time>
-            <h2>Bachelor of Arts in Multilingual Communication</h2>
-            <h3>University of Geneva, Switzerland</h3>
+            <h2>Grado en Comunicación Multilingüe</h2>
+            <h3>Universidad de Ginebra, Suiza</h3>
           </li>
         </ol>
       </section>
 
       <section class="education">
-        <h1>&nbsp;Courses&nbsp;</h1>
+        <h1>&nbsp;Cursos&nbsp;</h1>
         <ol>
           <li>
             <time>2021</time>
-            <h2>Children and young adult literary translation EN–ES</h2>
+            <h2>Traducción de literatura infantil y juvenil EN–ES</h2>
             <h3>AulaSIC</h3>
           </li>
           <li>
             <time>2021</time>
-            <h2>Subtitling and audiovisual translation</h2>
+            <h2>Traducción audiovisual: subtitulado</h2>
             <h3>AulaSIC</h3>
           </li>
           <li>
             <time>2020</time>
-            <h2>Punctuation and orthography</h2>
+            <h2>Corrección ortográfica: la puntuación</h2>
             <h3>Cursiva (RAE)</h3>
           </li>
           <li>
             <time>2020</time>
-            <h2>Romantic and erotic translation EN–ES</h2>
+            <h2>Traducción romántica y erótica EN–ES</h2>
             <h3>AulaSIC</h3>
           </li>
         </ol>
@@ -257,6 +259,7 @@
       > img {
         width: 12.5rem;
         margin-bottom: 0.25rem;
+        border: 1.5mm solid #f6f3f7;
         border-radius: 50%;
       }
 
@@ -293,7 +296,6 @@
 
       > section {
         time {
-          display: inline;
           padding: 0 0.35rem;
           border-radius: 4px;
           font-size: 0.9rem;
@@ -302,12 +304,12 @@
         }
 
         h2 {
-          display: inline;
-          font-size: 1.15rem;
-          font-weight: 500;
           display: flex;
           align-items: center;
           gap: 0.5rem;
+          margin-bottom: 0;
+          font-size: 1.15rem;
+          font-weight: 500;
         }
 
         > ol {
