Small tweaks to website and CVs

--- a/cv-en.html
+++ b/cv-en.html
@@ -127,7 +127,7 @@
           <li>
             <time>2020 – 2021</time>
             <h2>Expert Diploma in Marketing Implementation and Transcreation</h2>
-            <h3><abbr title="Instituto Superior de Estudios Lingüísticos y Traducción">ISTRAD</abbr>, Spain</h3>
+            <h3><abbr title="Higher Institute of Linguistic Studies and Translation">ISTRAD</abbr>, Spain</h3>
           </li>
           <li>
             <time>2018</time>
