--- a/cv-es.html
+++ b/cv-es.html
@@ -16,7 +16,7 @@
       </svg>
 
       <h1>Ángela Graña Varela</h1>
-      <h2>Multilingual communication</h2>
+      <h2>Comunicación multilingüe</h2>
     </header>
 
     <aside>
