--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         <li>
           <time>2020 – 2021</time>
           <h3>Expert Diploma in Marketing Implementation and Transcreation</h3>
-          <h4>ISTRAD (Instituto Superior de Estudios Lingüísticos y Traducción), Spain</h4>
+          <h4>Higher Institute of Linguistic Studies and Translation (ISTRAD), Spain</h4>
         </li>
       </ol>
     </section>
@@ -675,7 +675,7 @@
         <li>
           <time>2020 – 2021</time>
           <h3>Experto en Traducción y Marketing: Transcreación y Publicidad Multilingüe</h3>
-          <h4>ISTRAD (Instituto Superior de Estudios Lingüísticos y Traducción), España</h4>
+          <h4>Instituto Superior de Estudios Lingüísticos y Traducción (ISTRAD), España</h4>
         </li>
       </ol>
     </section>
