Further optimize images

--- a/cv-es.html
+++ b/cv-es.html
@@ -20,7 +20,7 @@
     </header>
 
     <aside>
-      <img src="portrait.jpg">
+      <img src="portrait.webp">
 
       <section>
         <h1>&nbsp;Datos de contacto&nbsp;</h1>
