--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       </a>
 
       <article>
-        <img src="portrait.jpg" alt="Ángela’s picture" width="215" height="215">
+        <img src="portrait.webp" alt="Ángela’s picture" width="215" height="215">
         <h1>
           Howdy, I’m Ángela
           <i>🖐</i>
@@ -614,7 +614,7 @@
       </a>
 
       <article>
-        <img src="portrait.jpg" alt="Ángela’s picture" width="215" height="215">
+        <img src="portrait.webp" alt="Ángela’s picture" width="215" height="215">
         <h1>
           Hola, soy Ángela <i>🖐</i>
         </h1>
