--- a/cv-en.html
+++ b/cv-en.html
@@ -20,7 +20,7 @@
     </header>
 
     <aside>
-      <img src="portrait.jpg">
+      <img src="portrait.webp">
 
       <section>
         <h1>&nbsp;Contact details&nbsp;</h1>
