Improve meta descriptions

--- a/es/index.html
+++ b/es/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Resumen de la trayectoria profesional de Ángela Graña Varela.">
-  <title>Ángela G. V.</title>
+  <meta name="description" content="Servicios lingüísticos y creativos de Ángela Graña Varela: traducción, corrección, localización, transcreación, marketing, creación de contenido, redes sociales.">
+  <title>Ángela G. V. – Comunicación multilingüe</title>
   <base href="/">
   <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">👩🏻‍💻</text></svg>'>
   <link rel="stylesheet" href="main.css">
@@ -47,7 +47,7 @@
           <li tabindex="0" aria-describedby="servicio-traduccion">Traducción</li>
           <li tabindex="0" aria-describedby="servicio-revision">Revisión</li>
           <li tabindex="0" aria-describedby="servicio-transcreacion">Transcreación</li>
-          <li tabindex="0" aria-describedby="servicio-copywriting">Copywriting</li>
+          <li tabindex="0" aria-describedby="servicio-copywriting"><em>Copywriting</em></li>
         </ul>
         <ul>
           <li id="servicio-traduccion">Traduzco textos del inglés, del francés y del gallego al español. Gracias a mi experiencia internacional, puedo traducir hacia el español de España o a un español más "panhispánico" (¡no olvidemos que el español neutro no existe!), y me comprometo a producir textos fiables y con sensibilidad a las diferencias culturales. Aunque puedo abarcar una gran variedad de temáticas, y me encanta trabajar en cosas nuevas, tengo amplia experiencia en áreas como la nutrición, la medicina del estilo de vida y las dietas vegetales. Mis estándares de calidad son exigentes y me esfuerzo para entregar textos pulidos con gran atención al detalle.</li>
