--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Summary of the professional career of Ángela Graña Varela.">
-  <title>Ángela G. V.</title>
+  <meta name="description" content="Linguistic and creative services by Ángela Graña Varela: translation, proofreading, localization, transcreation, marketing, content creation, social media.">
+  <title>Ángela G. V. – Multilingual communication</title>
   <base href="/">
   <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">👩🏻‍💻</text></svg>'>
   <link rel="stylesheet" href="main.css">
