Update Spanish copy

--- a/es/index.html
+++ b/es/index.html
@@ -22,7 +22,7 @@
           Hola, soy Ángela <i>🖐</i>
         </h1>
         <p>
-          Trabajo como traductora profesional del inglés, francés y gallego al español. Me crié en Galicia, España, y mi amor por los idiomas hizo que acabase estudiando en la Facultad de Traducción e Interpretación de la Universidad de Ginebra, mientras vivía en Francia al otro lado de la frontera. Con mi trayectoria en comunicación, <em>marketing</em> y redes sociales, y más de ocho años de experiencia con organizaciones sin ánimo de lucro, creo fervientemente en el poder del lenguaje como motor del cambio. Los proyectos creativos son música para mis oídos, por eso me encantan la transcreación y la traducción literaria. También soy cantante y música, y me encanta aprender cosas nuevas de forma constante, así que tengo una lista de <em>hobbies</em> generosa, como la lectura, la repostería con masa madre, el punto o la jardinería.
+          Trabajo como profesional de la traducción y la comunicación en español, inglés, francés y gallego. Me crié en Galicia, España, y mi amor por los idiomas hizo que acabase estudiando en la Facultad de Traducción e Interpretación de la Universidad de Ginebra, mientras vivía en Francia al otro lado de la frontera. Con mi trayectoria en comunicación, <em>marketing</em> y redes sociales, y más de ocho años de experiencia en el ámbito de las organizaciones sin ánimo de lucro, creo fervientemente en el poder del lenguaje como motor de cambio. Los proyectos creativos son música para mis oídos, por eso disfruto de la transcreación y la traducción literaria. También soy cantante y música, y me gusta manterme activa con una lista variada de aficiones, entre las que se encuentran la lectura, la repostería con masa madre, el punto o la jardinería.
         </p>
         <ul>
           <li><a href="#contacto" title="Ir al formulario de contacto">Contacto</a>
@@ -86,7 +86,7 @@
     <section id="cursos">
       <h2>
         <a href="#cursos">
-          &nbsp;No pienso dejar de aprender, así que he ido haciendo estos <strong>cursos</strong>&nbsp;<i>📚</i>&nbsp;
+          &nbsp;No pienso dejar de formarme, así que he ido haciendo estos <strong>cursos</strong>&nbsp;<i>📚</i>&nbsp;
         </a>
       </h2>
       <ol class="timeline">
