Update English copy

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <i>🖐</i>
         </h1>
         <p>
-          A professional translator and communicator working from English, French and Galician into Spanish. I grew up in Galicia, Spain, and my love for languages led me to study at University of Geneva, while living in France right across the border. With a background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to have a positive impact. You can make my heart sing with creative projects, which is why I enjoy transcreation and literary translation. On that same note, I am also a singer and musician, and I like to constantly learn new skills, so I keep up with a diverse list of hobbies, including reading, baking, knitting and gardening.
+          A professional translator and communicator working with Spanish, English, French and Galician. I grew up in Galicia, Spain, and my love for languages led me to study at University of Geneva, while living in France right across the border. With a background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to have a positive impact. You can make my heart sing with creative projects, which is why I enjoy transcreation and literary translation. On that same note, I am also a singer and musician, and I like to constantly learn new skills, so I keep up with a diverse list of hobbies, including reading, baking, knitting and gardening.
         </p>
         <ul>
           <li><a href="#contact" title="Scroll down to contact form">Contact</a>
